--- a/index.html
+++ b/index.html
@@ -7,16 +7,9 @@
   <meta name="keywords" content="mths, ics2o">
   <meta name="author" content="Mr. Coxall">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="./css/style.css">
   <title>My first webpage, with proper style</title>
 </head>
-<style>
-  #my-header {
-    background-color: rgb(135, 90, 185);
-    color: hsl(308, 52%, 66%);
-    padding: 40px;
-    text-align: center;
-  }
-</style>
 <body style="background-color:rgb(219, 157, 157);">
   <h1 id="my-header">Style is important</h1>
   <p style="background-color:#e6cc85;">Proper HTML style is important</p>
