--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
   <link rel="stylesheet" href="./css/style.css">
   <title>My first webpage, with proper style</title>
 </head>
-<body style="background-color:rgb(219, 157, 157);">
-  <h1 id="my-header">Style is important</h1>
-  <p style="background-color:#e6cc85;">Proper HTML style is important</p>
+<body 
+  <h1>id="my-header">Style is important</h1>
+  <p>Proper HTML style is important</p>
   <img src="./images/HTML-style-guide.jpeg" alt="style">
   <p>
     <a href="./cities.html">My cities page</a>
