--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <link rel="stylesheet" href="./css/style.css">
   <title>My first webpage, with proper style</title>
 </head>
-<body 
-  <h1>id="my-header">Style is important</h1>
+<body>
+  <h1 id="my-header"> Style is important</h1>
   <p>Proper HTML style is important</p>
   <img src="./images/HTML-style-guide.jpeg" alt="style">
   <p>
